--- a/G10 4th Collab Project feat. Erol/css-files/index.css
+++ b/G10 4th Collab Project feat. Erol/css-files/index.css
@@ -21,6 +21,10 @@ body {
     font-size: var(--text-size);
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 body button {
     cursor: pointer;
     border: none;
