--- a/G10 4th Collab Project feat. Erol/css-files/account.css
+++ b/G10 4th Collab Project feat. Erol/css-files/account.css
@@ -11,10 +11,6 @@ body {
     background: #F0F0F0;
 }
 
-body::-webkit-scrollbar {
-    display: none;
-}
-
 #options {
     z-index: 1;
     position: fixed;
@@ -94,6 +90,10 @@ body::-webkit-scrollbar {
     overflow-y: scroll;
     right: 7%;
     top: 15%;
+}
+
+#inputs::-webkit-scrollbar {
+    display: none;
 }
 
 .input-area {
