--- a/G10 4th Collab Project feat. Erol/css-files/about-us.css
+++ b/G10 4th Collab Project feat. Erol/css-files/about-us.css
@@ -9,6 +9,11 @@ section {
     padding: 3em;
     overflow-y: scroll;
 }
+
+section::-webkit-scrollbar {
+    display: none;
+}
+
 section h1 {
     text-transform: uppercase;
 }
