Revert "Update log-in.css"
This reverts commit e06cad0bb8e2d960f4986a8e159cf5c7df395779.

--- a/G10 4th Collab Project feat. Erol/css-files/log-in.css
+++ b/G10 4th Collab Project feat. Erol/css-files/log-in.css
@@ -17,7 +17,7 @@ body {
     font-family: var(--content-font);
     height: calc(100vh - 8em);
     color: var(--text-color);
-    background: url(/pictures/bg-log-in.png);
+    background: url(../pictures/bg-log-in.png);
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
