--- a/G10 4th Collab Project feat. Erol/css-files/log-in.css
+++ b/G10 4th Collab Project feat. Erol/css-files/log-in.css
@@ -16,7 +16,6 @@
 body {
     font-family: var(--content-font);
     height: calc(100vh - 8em);
-    width: 100vw;
     color: var(--text-color);
     background: url(../pictures/bg-log-in.png);
     background-size: cover;
@@ -26,6 +25,14 @@ body {
 
 a {
     color: var(--text-color);    
+}
+
+#bg-img {
+    z-index: -1;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
 }
 
 #company-name {
