--- a/G10 4th Collab Project feat. Erol/css-files/log-in.css
+++ b/G10 4th Collab Project feat. Erol/css-files/log-in.css
@@ -24,6 +24,16 @@ body {
     overflow: hidden;
 }
 
+#bg-img {
+    z-index: -1;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background: url(../pictures/bg-log-in.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 a {
     color: var(--text-color);    
 }
